--- a/app/src/main/res/layout/activity_device_music.xml
+++ b/app/src/main/res/layout/activity_device_music.xml
@@ -1,10 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".DeviceMusicActivity">
+
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/toolbar_color"
+        android:elevation="4dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Local Music List"
+                android:textColor="@color/black"
+                android:textSize="22sp"
+                android:layout_centerVertical="true"
+                android:textStyle="bold|italic" />
+
+        </RelativeLayout>
+    </androidx.appcompat.widget.Toolbar>
 
     <ListView
         android:id="@+id/device_song_recycler_view"
@@ -12,4 +35,4 @@
         android:layout_height="match_parent"
         android:choiceMode="singleChoice"
         android:padding="10dp"/>
-</RelativeLayout>
+</LinearLayout>
